# zmqx

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TODO.md  cabal.project  zmqx.cabal
app/: Main.hs
docs/: checklist.md  examples.md  quickstart.md
docs/superpowers/plans/: 2026-04-02-zmqxt-core-test-plan.md  2026-04-02-zmqxt-implementation.md  2026-04-03-demo-test-split.md
docs/superpowers/specs/: 2026-04-01-shutdown-policy-design.md  2026-04-01-thread-lifetime-policy-design.md  2026-04-01-with-socket-design.md  2026-04-02-zmqxt-core-test-design.md  2026-04-02-zmqxt-design.md  2026-04-03-demo-test-split-design.md  2026-04-05-region-typing-and-compatibility-design.md
lib/: Zmqx.hs
lib/Zmqx/: Dealer.hs  Error.hs  Internal.hs  Monad.hs  Options.hs  Pair.hs  Pub.hs  Pull.hs  Push.hs  Rep.hs  Req.hs  Router.hs  Sub.hs  Subscription.hs  XPub.hs  XSub.hs
lib/Zmqx/Core/: Context.hs  Curve.hs  Dealer.hs  Error.hs  IO.hs  Monitor.hs  Options.hs  Options.hs-boot  Pair.hs  Poll.hs  Pub.hs  Pull.hs  Push.hs  Rep.hs  Req.hs  Router.hs  Socket.hs  Socket.hs-boot  SocketFinalizer.hs  SomeSocket.hs  Sub.hs  Subscription.hs  XPub.hs  XSub.hs
lib/Zmqx/Core/Internal/: Context.hs  Curve.hs  IO.hs  Monitor.hs  Options.hs  Options.hs-boot  Poll.hs  Socket.hs  Socket.hs-boot  SocketFinalizer.hs  SomeSocket.hs
lib/Zmqx/Internal/: Bindings.hs  Functions.hs  Types.hs
lib/Zmqx/Internal/Bindings/: Constants.hs  Functions.hs  Types.hsc  ZConstants.hsc
test/: BrokerAuto.hs  Common.hs  ContextualOpen.hs  DealerRouterAuto.hs  FinalizerRegistry.hs  ItemsPoll.hs  ItemsPollAuto.hs  LBWorker.hs  LBWorkerAuto.hs  MonitorEvent.hs  MutWorker.hs  MutWorkerAuto.hs  PollOut.hs  ProxyAuto.hs  PubSubAuto.hs  ReceivesFor.hs  ReqPoll.hs  ReqRepAuto.hs  RunGuard.hs  SimpleBroker.hs  SimpleDealer.hs  SimpleProxy.hs  SimplePub.hs  SimpleRep.hs  SimpleReq.hs  SimpleRouter.hs  SimpleSub.hs  TaskPipelineAuto.hs  TaskSink.hs  TaskVentilator.hs  TaskWorker.hs  Version.hs  ZmqxMonad.hs  test.cabal
