cabal-version:   3.0
name:            zmqx
version:         0.1.0.0
synopsis:        zmq haskell
description:     zmq haskell
license:         BSD-3-Clause
license-file:    LICENSE
author:          jacobxy
maintainer:      jacobbishopxy@gmail.com
copyright:       (c) Jacob Xie 2025
build-type:      Simple
extra-doc-files: CHANGELOG.md

flag debug
  description: Enable debug output
  default:     False
  manual:      True

common shared-properties
  default-language: GHC2024
  build-depends:    base >=4 && <5
  ghc-options:      -Wall

  if flag(debug)
    cpp-options: -DZMQX_DEBUG

------------------------------------------------------------------------------------------------
-- Lib
------------------------------------------------------------------------------------------------

library
  import:             shared-properties
  exposed-modules:
    Zmqx
    Zmqx.Dealer
    Zmqx.Pair
    Zmqx.Pub
    Zmqx.Pull
    Zmqx.Push
    Zmqx.Rep
    Zmqx.Req
    Zmqx.Router
    Zmqx.Sub
    Zmqx.XPub
    Zmqx.XSub

  other-modules:
    Zmqx.Core.Context
    Zmqx.Core.Curve
    Zmqx.Core.IO
    Zmqx.Core.Monitor
    Zmqx.Core.Options
    Zmqx.Core.Poll
    Zmqx.Core.Socket
    Zmqx.Core.SocketFinalizer
    Zmqx.Core.SomeSocket
    Zmqx.Error
    Zmqx.Internal
    Zmqx.Internal.Bindings
    Zmqx.Internal.Bindings.Constants
    Zmqx.Internal.Bindings.Functions
    Zmqx.Internal.Bindings.Types
    Zmqx.Internal.Bindings.ZConstants
    Zmqx.Internal.Functions
    Zmqx.Internal.Types
    Zmqx.Subscription

  build-depends:
    , array
    , base        ^>=4.20.0.0
    , bytestring
    , containers
    , primitive
    , random
    , text
    , text-short

  build-tool-depends: hsc2hs:hsc2hs
  default-extensions:
    BlockArguments
    CApiFFI
    DerivingStrategies
    InterruptibleFFI
    PatternSynonyms
    ViewPatterns

  ghc-options:
    -Weverything -Wno-all-missed-specialisations -Wno-implicit-prelude
    -Wno-missed-specialisations -Wno-missing-import-lists -Wno-safe
    -Wno-unsafe -Wno-missing-kind-signatures

  default-extensions: Unsafe
  hs-source-dirs:     lib
  include-dirs:       lib/c
  includes:
    utils.c
    zmq-wrapper.h

  c-sources:
    lib/c/utils.c
    lib/c/zmq-wrapper.c

  if os(windows)
    extra-libraries: zmq

  else
    pkgconfig-depends: libzmq >=4.0 && <5.0

------------------------------------------------------------------------------------------------
-- TEST CASES
------------------------------------------------------------------------------------------------

test-suite test-version
  import:         shared-properties
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Version.hs
  build-depends:
    , text
    , zmqx

------------------------------------------------------------------------------------------------
-- req -> rep

test-suite test-simple-req
  import:         shared-properties
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        SimpleReq.hs
  other-modules:  Common
  build-depends:
    , text
    , zmqx

test-suite test-simple-rep
  import:         shared-properties
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        SimpleRep.hs
  other-modules:  Common
  build-depends:
    , text
    , zmqx

------------------------------------------------------------------------------------------------
-- dealer -> router

test-suite test-simple-dealer
  import:         shared-properties
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        SimpleDealer.hs
  other-modules:  Common
  build-depends:
    , bytestring
    , text
    , zmqx

test-suite test-simple-router
  import:         shared-properties
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        SimpleRouter.hs
  other-modules:  Common
  build-depends:
    , text
    , zmqx

------------------------------------------------------------------------------------------------
-- pub -> sub

test-suite test-simple-pub
  import:           shared-properties
  default-language: GHC2024
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          SimplePub.hs
  other-modules:    Common
  build-depends:
    , bytestring
    , random
    , text
    , zmqx

test-suite test-simple-sub
  import:           shared-properties
  default-language: GHC2024
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          SimpleSub.hs
  other-modules:    Common
  build-depends:
    , bytestring
    , random
    , text
    , zmqx

------------------------------------------------------------------------------------------------
-- ventilator -> worker[] -> sink

test-suite test-task-ventilator
  import:           shared-properties
  default-language: GHC2024
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          TaskVentilator.hs
  other-modules:    Common
  build-depends:
    , bytestring
    , random
    , text
    , zmqx

test-suite test-task-worker
  import:           shared-properties
  default-language: GHC2024
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          TaskWorker.hs
  other-modules:    Common
  build-depends:
    , bytestring
    , random
    , text
    , zmqx

test-suite test-task-sink
  import:           shared-properties
  default-language: GHC2024
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          TaskSink.hs
  other-modules:    Common
  build-depends:
    , bytestring
    , random
    , text
    , zmqx

------------------------------------------------------------------------------------------------
-- items + poll

test-suite test-items-poll
  import:           shared-properties
  default-language: GHC2024
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          ItemsPoll.hs
  other-modules:    Common
  build-depends:
    , text
    , zmqx

------------------------------------------------------------------------------------------------
-- routing <-> dealer, broker

test-suite test-simple-broker
  import:           shared-properties
  default-language: GHC2024
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          SimpleBroker.hs
  other-modules:    Common
  build-depends:
    , text
    , zmqx

------------------------------------------------------------------------------------------------
-- XPub + XSub, proxy

test-suite test-simple-proxy
  import:           shared-properties
  default-language: GHC2024
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          SimpleProxy.hs
  other-modules:    Common
  build-depends:
    , text
    , zmqx
