cabal-version:      3.0
name:               zmqx
version:            0.1.0.0
synopsis:           zmq haskell
description:        zmq haskell
license:            BSD-3-Clause
license-file:       LICENSE
author:             jacobxy
maintainer:         jacobbishopxy@gmail.com
copyright:          (c) Jacob Xie 2025
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:
  c/utils.c
  c/utils.h
  c/zmq-wrapper.c
  c/zmq-wrapper.h

flag debug
  description: Enable debug output
  default:     False
  manual:      True

common shared-properties
  default-language: GHC2024
  build-depends:    base >=4 && <5
  ghc-options:      -Wall

  if flag(debug)
    cpp-options: -DZMQX_DEBUG

common test-properties
  other-modules:      Common
  hs-source-dirs:     test
  build-depends:
    , mtl
    , text
    , time
    , zmqx

  default-extensions:
    BlockArguments
    OverloadedStrings

------------------------------------------------------------------------------------------------
-- Lib
------------------------------------------------------------------------------------------------

library
  import:             shared-properties
  exposed-modules:
    Zmqx
    Zmqx.Dealer
    Zmqx.Options
    Zmqx.Pair
    Zmqx.Pub
    Zmqx.Pull
    Zmqx.Push
    Zmqx.Rep
    Zmqx.Req
    Zmqx.Router
    Zmqx.Sub
    Zmqx.XPub
    Zmqx.XSub

  other-modules:
    Zmqx.Core.Context
    Zmqx.Core.Curve
    Zmqx.Core.IO
    Zmqx.Core.Monitor
    Zmqx.Core.Options
    Zmqx.Core.Poll
    Zmqx.Core.Socket
    Zmqx.Core.SocketFinalizer
    Zmqx.Core.SomeSocket
    Zmqx.Error
    Zmqx.Internal
    Zmqx.Internal.Bindings
    Zmqx.Internal.Bindings.Constants
    Zmqx.Internal.Bindings.Functions
    Zmqx.Internal.Bindings.Types
    Zmqx.Internal.Bindings.ZConstants
    Zmqx.Internal.Functions
    Zmqx.Internal.Types
    Zmqx.Subscription

  build-depends:
    , array
    , base        ^>=4.20.0.0
    , bytestring
    , containers
    , primitive
    , random
    , text
    , text-short

  build-tool-depends: hsc2hs:hsc2hs
  default-extensions:
    BlockArguments
    CApiFFI
    DerivingStrategies
    InterruptibleFFI
    PatternSynonyms
    ViewPatterns

  ghc-options:
    -Weverything -Wno-all-missed-specialisations -Wno-implicit-prelude
    -Wno-missed-specialisations -Wno-missing-import-lists -Wno-safe
    -Wno-unsafe -Wno-missing-kind-signatures

  default-extensions: Unsafe
  hs-source-dirs:     lib
  include-dirs:       c
  includes:
    utils.c
    zmq-wrapper.h

  c-sources:
    c/utils.c
    c/zmq-wrapper.c

  if os(windows)
    extra-libraries: zmq

  else
    pkgconfig-depends: libzmq >=4.0 && <5.0

------------------------------------------------------------------------------------------------
-- TEST CASES
------------------------------------------------------------------------------------------------

test-suite test-version
  import:  shared-properties, test-properties
  type:    exitcode-stdio-1.0
  main-is: Version.hs

------------------------------------------------------------------------------------------------
-- Req -> Rep

test-suite test-simple-req
  import:        shared-properties, test-properties
  type:          exitcode-stdio-1.0
  main-is:       SimpleReq.hs
  build-depends: bytestring

test-suite test-simple-rep
  import:  shared-properties, test-properties
  type:    exitcode-stdio-1.0
  main-is: SimpleRep.hs

------------------------------------------------------------------------------------------------
-- Dealer -> Router

test-suite test-simple-dealer
  import:        shared-properties, test-properties
  type:          exitcode-stdio-1.0
  main-is:       SimpleDealer.hs
  build-depends: bytestring

test-suite test-simple-router
  import:  shared-properties, test-properties
  type:    exitcode-stdio-1.0
  main-is: SimpleRouter.hs

------------------------------------------------------------------------------------------------
-- Pub -> Sub

test-suite test-simple-pub
  import:        shared-properties, test-properties
  type:          exitcode-stdio-1.0
  main-is:       SimplePub.hs
  build-depends:
    , bytestring
    , random

test-suite test-simple-sub
  import:        shared-properties, test-properties
  type:          exitcode-stdio-1.0
  main-is:       SimpleSub.hs
  build-depends:
    , bytestring
    , random

------------------------------------------------------------------------------------------------
-- ventilator -> worker[] -> sink

test-suite test-task-ventilator
  import:        shared-properties, test-properties
  type:          exitcode-stdio-1.0
  main-is:       TaskVentilator.hs
  build-depends:
    , bytestring
    , random

test-suite test-task-worker
  import:        shared-properties, test-properties
  type:          exitcode-stdio-1.0
  main-is:       TaskWorker.hs
  build-depends:
    , bytestring
    , random

test-suite test-task-sink
  import:        shared-properties, test-properties
  type:          exitcode-stdio-1.0
  main-is:       TaskSink.hs
  build-depends:
    , bytestring
    , random

------------------------------------------------------------------------------------------------
-- items + poll

test-suite test-items-poll
  import:  shared-properties, test-properties
  type:    exitcode-stdio-1.0
  main-is: ItemsPoll.hs

------------------------------------------------------------------------------------------------
-- Router <-> Dealer, broker

test-suite test-simple-broker
  import:  shared-properties, test-properties
  type:    exitcode-stdio-1.0
  main-is: SimpleBroker.hs

------------------------------------------------------------------------------------------------
-- XPub + XSub, proxy

test-suite test-simple-proxy
  import:  shared-properties, test-properties
  type:    exitcode-stdio-1.0
  main-is: SimpleProxy.hs

------------------------------------------------------------------------------------------------
-- Router -> Dealer (inproc) -> Rep[] (inproc)

test-suite test-mut-worker
  import:        shared-properties, test-properties
  type:          exitcode-stdio-1.0
  main-is:       MutWorker.hs
  build-depends:
    , bytestring
    , ki

------------------------------------------------------------------------------------------------
-- Router (ipc) -> Router (ipc)

test-suite test-lb-worker
  import:        shared-properties, test-properties
  type:          exitcode-stdio-1.0
  main-is:       LBWorker.hs
  build-depends:
    , bytestring
    , ki
