cabal-version:      3.0
name:               zmqx
version:            0.1.0.0
synopsis:           zmq haskell
description:        zmq haskell
license:            BSD-3-Clause
license-file:       LICENSE
author:             jacobxy
maintainer:         jacobbishopxy@gmail.com
copyright:          (c) Jacob Xie 2025
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:
  c/utils.c
  c/utils.h
  c/zmq-wrapper.c
  c/zmq-wrapper.h

flag debug
  description: Enable debug output
  default:     False
  manual:      True

common shared-properties
  default-language: GHC2024
  build-depends:    base >=4 && <5
  ghc-options:      -Wall

  if flag(debug)
    cpp-options: -DZMQX_DEBUG

------------------------------------------------------------------------------------------------
-- Lib
------------------------------------------------------------------------------------------------

library
  import:             shared-properties
  exposed-modules:
    Zmqx
    Zmqx.Dealer
    Zmqx.Options
    Zmqx.Pair
    Zmqx.Pub
    Zmqx.Pull
    Zmqx.Push
    Zmqx.Rep
    Zmqx.Req
    Zmqx.Router
    Zmqx.Sub
    Zmqx.XPub
    Zmqx.XSub

  other-modules:
    Zmqx.Core.Context
    Zmqx.Core.Curve
    Zmqx.Core.IO
    Zmqx.Core.Monitor
    Zmqx.Core.Options
    Zmqx.Core.Poll
    Zmqx.Core.Socket
    Zmqx.Core.SocketFinalizer
    Zmqx.Core.SomeSocket
    Zmqx.Error
    Zmqx.Internal
    Zmqx.Internal.Bindings
    Zmqx.Internal.Bindings.Constants
    Zmqx.Internal.Bindings.Functions
    Zmqx.Internal.Bindings.Types
    Zmqx.Internal.Bindings.ZConstants
    Zmqx.Internal.Functions
    Zmqx.Internal.Types
    Zmqx.Subscription

  build-depends:
    , array
    , base        ^>=4.20.0.0
    , bytestring
    , containers
    , primitive
    , random
    , text
    , text-short

  build-tool-depends: hsc2hs:hsc2hs
  default-extensions:
    BlockArguments
    CApiFFI
    DerivingStrategies
    InterruptibleFFI
    PatternSynonyms
    ViewPatterns

  ghc-options:
    -Weverything -Wno-all-missed-specialisations -Wno-implicit-prelude
    -Wno-missed-specialisations -Wno-missing-import-lists -Wno-safe
    -Wno-unsafe -Wno-missing-kind-signatures

  default-extensions: Unsafe
  hs-source-dirs:     lib
  include-dirs:       c
  includes:
    utils.c
    zmq-wrapper.h

  c-sources:
    c/utils.c
    c/zmq-wrapper.c

  if os(windows)
    extra-libraries: zmq

  else
    pkgconfig-depends: libzmq >=4.0 && <5.0
