cabal-version: 3.0
name:          test
version:       0.1.0.0
author:        jacob
maintainer:    jacobbishopxy@gmail.com
build-type:    Simple

flag debug
  description: Enable debug output
  default:     False
  manual:      True

flag demo-tests
  description: Enable manual demo-style test executables
  default:     False
  manual:      True

common test-properties
  default-language:   GHC2024
  other-modules:      Common
  hs-source-dirs:     .
  build-depends:
    , base  >=4 && <5
    , mtl
    , text
    , time
    , zmqx

  ghc-options:        -Wall
  default-extensions:
    BlockArguments
    OverloadedStrings

  if flag(debug)
    cpp-options: -DZMQX_DEBUG

------------------------------------------------------------------------------------------------
-- TEST CASES
------------------------------------------------------------------------------------------------

test-suite test-version
  import:  test-properties
  type:    exitcode-stdio-1.0
  main-is: Version.hs

------------------------------------------------------------------------------------------------
-- Req -> Rep

test-suite test-simple-req
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       SimpleReq.hs
  build-depends: bytestring

  if !flag(demo-tests)
    buildable: False

test-suite test-simple-rep
  import:  test-properties
  type:    exitcode-stdio-1.0
  main-is: SimpleRep.hs

  if !flag(demo-tests)
    buildable: False

------------------------------------------------------------------------------------------------
-- Dealer -> Router

test-suite test-simple-dealer
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       SimpleDealer.hs
  build-depends: bytestring

  if !flag(demo-tests)
    buildable: False

test-suite test-simple-router
  import:  test-properties
  type:    exitcode-stdio-1.0
  main-is: SimpleRouter.hs

  if !flag(demo-tests)
    buildable: False

------------------------------------------------------------------------------------------------
-- Pub -> Sub

test-suite test-simple-pub
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       SimplePub.hs
  build-depends:
    , bytestring
    , random

  if !flag(demo-tests)
    buildable: False

test-suite test-simple-sub
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       SimpleSub.hs
  build-depends:
    , bytestring
    , random

  if !flag(demo-tests)
    buildable: False

------------------------------------------------------------------------------------------------
-- ventilator -> worker[] -> sink

test-suite test-task-ventilator
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       TaskVentilator.hs
  build-depends:
    , bytestring
    , random

  if !flag(demo-tests)
    buildable: False

test-suite test-task-worker
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       TaskWorker.hs
  build-depends:
    , bytestring
    , random

  if !flag(demo-tests)
    buildable: False

test-suite test-task-sink
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       TaskSink.hs
  build-depends:
    , bytestring
    , random

  if !flag(demo-tests)
    buildable: False

------------------------------------------------------------------------------------------------
-- items + poll

test-suite test-items-poll
  import:  test-properties
  type:    exitcode-stdio-1.0
  main-is: ItemsPoll.hs

  if !flag(demo-tests)
    buildable: False

test-suite test-items-poll-auto
  import:  test-properties
  type:    exitcode-stdio-1.0
  main-is: ItemsPollAuto.hs

test-suite test-poll-out
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       PollOut.hs
  build-depends: bytestring

------------------------------------------------------------------------------------------------
-- Router <-> Dealer, broker

test-suite test-simple-broker
  import:  test-properties
  type:    exitcode-stdio-1.0
  main-is: SimpleBroker.hs

  if !flag(demo-tests)
    buildable: False

------------------------------------------------------------------------------------------------
-- XPub + XSub, proxy

test-suite test-simple-proxy
  import:  test-properties
  type:    exitcode-stdio-1.0
  main-is: SimpleProxy.hs

  if !flag(demo-tests)
    buildable: False

------------------------------------------------------------------------------------------------
-- Router -> Dealer (inproc) -> Rep[] (inproc)

test-suite test-mut-worker
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       MutWorker.hs
  build-depends:
    , bytestring
    , ki

  if !flag(demo-tests)
    buildable: False

------------------------------------------------------------------------------------------------
-- Router (ipc) -> Router (ipc)

test-suite test-lb-worker
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       LBWorker.hs
  build-depends:
    , bytestring
    , ki

  if !flag(demo-tests)
    buildable: False

test-suite test-mut-worker-auto
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       MutWorkerAuto.hs
  build-depends: bytestring

test-suite test-lb-worker-auto
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       LBWorkerAuto.hs
  build-depends: bytestring

------------------------------------------------------------------------------------------------
-- receivesFor timeout

test-suite test-recv-for
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       ReceivesFor.hs
  build-depends: bytestring

test-suite test-req-poll
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       ReqPoll.hs
  build-depends: bytestring

------------------------------------------------------------------------------------------------
-- ContextualOpen coverage

test-suite test-contextual-open
  import:  test-properties
  type:    exitcode-stdio-1.0
  main-is: ContextualOpen.hs

test-suite test-monitor-event
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       MonitorEvent.hs
  build-depends: bytestring

test-suite test-run-guard
  import:  test-properties
  type:    exitcode-stdio-1.0
  main-is: RunGuard.hs

------------------------------------------------------------------------------------------------
-- Automated replacements for manual demos

test-suite test-req-rep-auto
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       ReqRepAuto.hs
  build-depends: bytestring

test-suite test-dealer-router-auto
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       DealerRouterAuto.hs
  build-depends: bytestring

test-suite test-pub-sub-auto
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       PubSubAuto.hs
  build-depends: bytestring

test-suite test-broker-auto
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       BrokerAuto.hs
  build-depends: bytestring

test-suite test-proxy-auto
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       ProxyAuto.hs
  build-depends: bytestring

test-suite test-task-pipeline-auto
  import:        test-properties
  type:          exitcode-stdio-1.0
  main-is:       TaskPipelineAuto.hs
  build-depends: bytestring

------------------------------------------------------------------------------------------------
-- Finalizer registry compaction

test-suite test-finalizer-registry
  import:  test-properties
  type:    exitcode-stdio-1.0
  main-is: FinalizerRegistry.hs

test-suite test-zmqxt
  import:  test-properties
  type:    exitcode-stdio-1.0
  main-is: ZmqxMonad.hs
